--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -16,7 +16,6 @@
       justify-content: center;
       padding: 20px;
     }
-
     .form-wrapper {
       display: flex;
       flex-direction: column;
@@ -24,7 +23,6 @@
       width: 100%;
       max-width: 600px;
     }
-
     .avatar-btn {
       width: 64px;
       height: 64px;
@@ -39,7 +37,6 @@
       margin-bottom: 15px;
       cursor: default;
     }
-
     form {
       background-color: #ffffff;
       padding: 30px 40px;
@@ -47,104 +44,176 @@
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       width: 100%;
     }
-
-    h2 {
-      text-align: center;
-      color: #333;
-      margin-bottom: 20px;
+    h2 { text-align: center; color: #333; margin-bottom: 20px; }
+    label { display: block; margin-top: 15px; margin-bottom: 5px; color: #555; font-weight: 600; }
+    input[type="text"], input[type="email"], input[type="tel"], select, textarea {
+      width: 100%; padding: 10px 12px; border: 1px solid #ccc; border-radius: 6px; font-size: 15px; transition: border 0.2s;
     }
-
-    label {
-      display: block;
-      margin-top: 15px;
-      margin-bottom: 5px;
-      color: #555;
-      font-weight: 600;
-    }
-
-    input, textarea {
-      width: 100%;
-      padding: 10px 12px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 15px;
-    }
-
-    button {
-      margin-top: 20px;
-      width: 100%;
-      padding: 12px;
-      background-color: #4CAF50;
-      color: white;
-      font-size: 16px;
-      font-weight: bold;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-
-    #loading {
-      display: none;
-      text-align: center;
-      font-weight: bold;
-      margin-top: 10px;
-    }
+    input:focus, select:focus, textarea:focus { border-color: #4CAF50; outline: none; }
+    textarea { resize: vertical; min-height: 80px; }
+    input[type="file"] { margin-top: 10px; }
+    button { margin-top: 20px; width: 100%; padding: 12px; background-color: #4CAF50; color: white; font-size: 16px; font-weight: bold; border: none; border-radius: 6px; cursor: pointer; transition: background-color 0.3s ease; }
+    button:hover { background-color: #45a049; }
+    #result { font-weight: bold; padding: 10px; margin-top: 15px; text-align: center; border-radius: 6px; }
+    .success { background-color: #4CAF50; color: white; }
+    .error { background-color: #f44336; color: white; }
+    #loading { display: none; text-align: center; color: #333; font-weight: bold; margin-top: 10px; }
   </style>
 </head>
 
 <body>
 
-<div class="form-wrapper">
+  <div class="form-wrapper">
+    <button class="avatar-btn" id="avatarBtn">⚡</button>
 
-  <button class="avatar-btn" id="avatarBtn">⚡</button>
+    <form id="register-form">
+      <h2>Rejestracja</h2>
 
-  <form id="register-form">
-    <h2>Rejestracja</h2>
+      <label for="imie">Imię:</label>
+      <input type="text" id="imie" name="imie" required oninput="this.value = this.value.toUpperCase();">
 
-    <label>Imię:</label>
-    <input id="imie" required oninput="this.value=this.value.toUpperCase()">
+      <label for="nazwisko">Nazwisko:</label>
+      <input type="text" id="nazwisko" name="nazwisko" required oninput="this.value = this.value.toUpperCase();">
 
-    <label>Nazwisko:</label>
-    <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
+      <label for="miasto">Miasto:</label>
+      <input type="text" id="miasto" name="miasto">
 
-    <label>Email:</label>
-    <input type="email" id="email">
+      <label for="wojewodztwo">Województwo:</label>
+      <input type="text" id="wojewodztwo" name="wojewodztwo">
 
-    <button type="submit">Zarejestruj</button>
-    <p id="loading">Trwa rejestracja...</p>
-  </form>
+      <label for="nrE">Nr uprawnień E:</label>
+      <textarea id="nrE" name="nrE" placeholder="Jeżeli posiadasz również uprawnienia pomiarowe, wypełniasz tylko pole poniżej: Nr uprawnień E z pomiarami"></textarea>
+     
+      <label for="nrEPomiary">Nr uprawnień E z pomiarami:</label>
+      <textarea id="nrEPomiary" name="nrEPomiary" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
 
-</div>
+      <label for="nrD">Nr uprawnień D:</label>
+      <textarea id="nrD" name="nrD" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
 
-<script type="module">
-  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email">
 
-  const supabase = createClient(
-    'https://tfbqqduxtsacvwfigsvt.supabase.co',
-    'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
-  )
+      <label for="telefon">Telefon:</label>
+      <input type="tel" id="telefon" name="telefon">
 
-  const avatarBtn = document.getElementById('avatarBtn')
-  const emailInput = document.getElementById('email')
+      <label for="zajmujeSie">Zajmuje się:</label>
+      <textarea id="zajmujeSie" name="zajmujeSie" placeholder="Tu możesz podać informację o Tobie, które zostaną wyświetlone osobie szukającej elektryka w Twojej okolicy"></textarea>
 
-  emailInput.addEventListener('input', () => {
-    if (emailInput.value) {
-      avatarBtn.textContent = emailInput.value[0].toUpperCase()
+      <label for="plik">Załącz skan uprawnień:</label>
+      <input type="file" id="plik" name="plik" accept="*/*" multiple>
+
+      <button type="submit">Zarejestruj</button>
+
+      <p id="result"></p>
+      <p id="loading">Trwa rejestracja, proszę czekać...</p>
+    </form>
+  </div>
+
+  <script type="module">
+    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+
+    const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co'
+    const supabaseKey = 'TWÓJ_KEY'
+    const supabase = createClient(supabaseUrl, supabaseKey)
+
+    const avatarBtn = document.getElementById('avatarBtn')
+
+    // 1️⃣ odczyt tokenu z linku
+    const params = new URLSearchParams(window.location.search)
+    const token = params.get('token') // np. https://.../rejestracja_formularz.html?token=XYZ
+
+    async function fetchUserData() {
+      if (!token) return
+      const { data, error } = await supabase
+        .from('zaproszenia') // tabela, w której przechowywane są tokeny + dane klienta
+        .select('imie, nazwisko, email')
+        .eq('token', token)
+        .single()
+
+      if (error) {
+        console.error('Błąd pobierania danych:', error.message)
+        return
+      }
+
+      if (data) {
+        document.getElementById('imie').value = data.imie
+        document.getElementById('nazwisko').value = data.nazwisko
+        document.getElementById('email').value = data.email
+
+        // zmiana awatara
+        avatarBtn.textContent =
+          (data.imie[0] || '👤').toUpperCase() +
+          (data.nazwisko[0] || '').toUpperCase()
+      }
     }
-  })
 
-  // ✅ DODANE – AUTOMATYCZNE USTAWIENIE AWATARA PO MAGIC LINKU
-  const { data: { user } } = await supabase.auth.getUser()
-  if (user && user.email) {
-    avatarBtn.textContent = user.email[0].toUpperCase()
-    emailInput.value = user.email
-  }
+    fetchUserData() // automatyczne wypełnienie po wejściu
 
-  document.getElementById('register-form').addEventListener('submit', e => {
-    e.preventDefault()
-    document.getElementById('loading').style.display = 'block'
-  })
-</script>
+    document.getElementById('register-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      document.getElementById('loading').style.display = 'block';
+
+      const imie = document.getElementById('imie').value
+      const nazwisko = document.getElementById('nazwisko').value
+      const miasto = document.getElementById('miasto').value
+      const wojewodztwo = document.getElementById('wojewodztwo').value
+      const nrE = document.getElementById('nrE').value
+      const nrEPomiary = document.getElementById('nrEPomiary').value
+      const nrD = document.getElementById('nrD').value
+      const email = document.getElementById('email').value
+      const telefon = document.getElementById('telefon').value
+      const zajmujeSie = document.getElementById('zajmujeSie').value
+
+      const plikInput = document.getElementById('plik')
+      let plikUrls = []
+
+      if (plikInput.files.length > 0) {
+        for (let i = 0; i < plikInput.files.length; i++) {
+          const file = plikInput.files[i]
+          const filePath = `permissions/${Date.now()}_${i}_${file.name}`
+
+          const { error: uploadError } = await supabase.storage
+            .from('attachments')
+            .upload(filePath, file)
+
+          if (uploadError) {
+            document.getElementById('loading').style.display = 'none'
+            const result = document.getElementById('result')
+            result.textContent = 'Błąd przesyłania pliku: ' + uploadError.message
+            result.classList.add('error')
+            return
+          }
+
+          const { data: publicUrlData } = supabase.storage
+            .from('attachments')
+            .getPublicUrl(filePath)
+
+          plikUrls.push(publicUrlData.publicUrl)
+        }
+      }
+
+      const plikiString = plikUrls.join(',')
+
+      // 2️⃣ ZAPIS DO BAZY (aktualizacja istniejącego klienta wg tokenu)
+      const { error } = await supabase
+        .from('zaproszenia')
+        .update({
+          miasto, wojewodztwo, nrE, nrEPomiary, nrD, telefon, zajmujeSie, plik: plikiString, status: 'completed'
+        })
+        .eq('token', token)
+
+      const result = document.getElementById('result')
+      result.classList.remove('success', 'error')
+      document.getElementById('loading').style.display = 'none'
+
+      if (error) {
+        result.textContent = 'Błąd: ' + error.message
+        result.classList.add('error')
+      } else {
+        window.location.href = 'https://orep.pl/logowanie'
+      }
+    })
+  </script>
 
 </body>
 </html>
