--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
 
   <script>
     // 5️⃣ ADRES TWOJEGO PROJEKTU SUPABASE
-    const SUPABASE_URL = "https://TWÓJ_PROJECT_ID.supabase.co";
+    const SUPABASE_URL = "https://tfbqqduxtsacvwfigsvt.supabase.co";
 
     // 6️⃣ PUBLICZNY KLUCZ ANON (SAFE!)
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8";
